# kotlinloadrwkv

example/: README.md
example/android_test/: INSTALL_SDK_COMPONENTS.md  JNI_SETUP_README.md  README.md  gradlew  local.properties  settings.gradle.kts
example/android_test/app/: build.gradle.kts  proguard-rules.pro
example/android_test/app/src/main/: AndroidManifest.xml
example/android_test/app/src/main/cpp/: CMakeLists.txt  rwkv_jni.c  rwkv_jni.cpp  rwkv_mobile.h
example/android_test/app/src/main/java/com/example/rwkvmobiletest/: MainActivity.kt  RwkvMobile.kt
example/android_test/app/src/main/res/: b_rwkv_vocab_abc.txt
example/android_test/app/src/main/res/drawable/: ic_launcher_foreground.xml  log_background.xml
example/android_test/app/src/main/res/layout/: activity_main.xml
example/android_test/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
